changed .td to td
changed .td to td

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
   text-align: center;
   padding: 8px;
 }
-.td {
+td {
   border: 1px solid #000000;
   text-align: center;
   padding: 8px;
