--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,16 @@ body {
   font-size: 60px;
 }
 .wrapper {
+    position: relative;
     width: 100%;
     margin: 0 auto;
 }
 .table {
   border-collapse: collapse;
   table-layout: auto;
-  width: 100%;
+  width: 80%;
   border: 4px solid #ff6347;
-}
-.planets {
-  border: 2px solid #000000;
-  text-align: center;
-  padding: 8px;
-  border-collapse: collapse;
+  margin: 0 auto;
 }
 .th {
   font-family: Sofia, Verdana, sans-serif;
