--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,10 @@ body {
   font-size: 60px;
 }
 .wrapper {
-    position: relative;
-    width: 100%;
-    margin: 0 auto;
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 .table {
   border-collapse: collapse;
