--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,20 @@ body {
   font-size: 60px;
 }
 .wrapper {
-    display: block;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    margin: 0 auto;
 }
 .table {
   border-collapse: collapse;
   table-layout: auto;
-  width: 80%;
+  width: 100%;
   border: 4px solid #ff6347;
-  margin: 0 auto;
+}
+.planets {
+  border: 2px solid #000000;
+  text-align: center;
+  padding: 8px;
+  border-collapse: collapse;
 }
 .th {
   font-family: Sofia, Verdana, sans-serif;
@@ -36,6 +39,8 @@ body {
   text-align: center;
   padding: 8px;
 }
+#gray td
+
 td {
   border: 1px solid #000000;
   text-align: center;
